--- a/TheCover/TheCover.csproj
+++ b/TheCover/TheCover.csproj
@@ -130,7 +130,8 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(ProjectDir)bin\Release\$(TargetFileName) $(SolutionDir)\Release\</PostBuildEvent>
+    <PostBuildEvent>copy $(ProjectDir)bin\Release\$(TargetFileName) $(SolutionDir)Release\
+7z a $(SolutionDir)Release\$(TargetName).zip $(SolutionDir)Release\$(TargetFileName)</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
